<resources>
    <string name="app_name">Grundumsatz Rechner</string>
    <string name="title_activity_test">TestActivity</string>

    //Textdefinitionen der "activity_main.xml"
    <string name="gender">Geschlecht:</string>
    <string name="TextViewYears">in Jahren</string>
    <string name="rbMaennlich">männlich</string>
    <string name="rbWeiblich">weiblich</string>
    <string name="btnWeiter">weiter</string>
    <string name="textViewGewicht">Gewicht:</string>
    <string name="textViewGroesse">Grösse:</string>
    <string name="textViewAlter">Alter:</string>
    <string name="textViewEinheitKg">in kg</string>
    <string name="textViewEinheitCm">in cm</string>

    //Textdefinition der "activity_aktivitaet.xml"

    <string name="heading">Aktivitäten in Stunden:</string>
    <string name="textViewSchlaf">Schlaf:</string>
    <string name="textViewSitzendLiegend">nur sitzend/\nliegend:</string>
    <string name="textViewSitzendKaumAktiv">sitzend/\nkaum aktiv:</string>
    <string name="textViewStehendGehend">stehend/\ngehend:</string>
    <string name="textViewStundenInsg">Stunden insgesamt:</string>
    <string name="btnBerechnen">Berechnen</string>
    <string name="textViewSumStunden">0</string>
    <string name="textViewAnstrengendeArbeitSport">anstreng-\nende \nArbeit</string>
    <string name="textViewAnstrengendeArbeitSport2">anstreng-\nende Arbeit</string>

    //Textdefinition der "activity_ergebnis.xml"
    <string name="textViewDurchschnittlKalorienverbrauch">Ihr durchschnittlicher Kalorienverbrauch beträgt:</string>
    <string name="textViewErgebnisDurchschnitt">0 kcal</string>
    <string name="textViewGrundumsatz">Ihr Grundumsatz beträgt:</string>
    <string name="textViewErgebnisGrundumsatzKcal">0 kcal</string>
    <string name="textViewErgebnisGrundumsatzKj">0 kj</string>
    <string name="textViewKalorienverbrauchKj">0 kj</string>
    <string name="btnNeuStart">Neu starten</string>
    <string name="btnSpeichern">speichern</string>

    //Textdefinition für das toolbar_Menü
    <string name="symbol">Menu</string>
    <string name="titleHelp">Hilfe</string>
    <string name="titleSaved">Gespeicherte Daten</string>



    //Textdefinition für Hilfe-Seite
    <string name="outlineHelp">Hilfe:</string>
    <string name="outlineHinweise">Hinweise:</string>
    <string name="beschreibungHinweise">Faktoren wie Stress, Klima, Hormone können die benötigte Energiezufuhr eines Körpers beeinflussen. Bei der Berechnung der Energiezufuhr werden diese Eigenschaften/Gegebenheitenleider  außen vor gelassen. Die App dient nur zur ungefähren Bestimmung der Energiezufuhr und ist somit eine grobe Orientierung! Bei einer geplanten Ernährungsumstellung ziehen Sie bitte ärztliche Unterstützung hinzu! Des Weiteren werden angegebene bzw. gespeicherte Daten NICHT an Dritte weitergegeben! </string>
    <string name="frageEeins">Was kann mit dieser App berechnet werden?</string>
    <string name="antwortEins">Mit Hilfe  dieser App kann die Menge an Energie berechnet werden, die dem Körper in Form von Nahrung zugeführt werden muss, um den täglichen Energiebedarf zu decken. Die Berechnung der Energiezufuhr setzt sich aus dem Grundumsatz (= Menge an Energie, die ein Mensch innerhalb der 24h bei völlliger Ruhe im Durchschnitt mind. benötigt, um seine Körpertemepratur und den Grundstoffwechsel aufrecht zuerhalten) und dem Leistungsumsatz  (= die Energiemenge die ein Körper bei jeder weiteren Leistung die er verrichtet zuätzlich benötigt zum Grundumsatz benötigt).</string>
    <string name="frageZwei">Was bedeuten die jeweiligen Aktivitäten?</string>
    <string name="termSleep">Schlaf:</string>
    <string name="explainationTermSleep">völlige Ruhe des \n Körpers und Geist</string>
    <string name="termJustSitting">nur sitzdend/liegend:</string>
    <string name="explainationJustSitting">bettlägrige, gebrechliche \n Menschen</string>
    <string name="termActive">sitzend/ kaum aktiv:</string>
    <string name="explainationActive">z.B  Büroangestellte, Fein-\n mechaniker</string>
    <string name="termStay">stehend/ gehend:</string>
    <string name="explainationStay">z.B. Verkäufer, Kellner,\n Handwerker</string>
    <string name="termSport">anstrengende Arbeit/</string>
    <string name="explainationSport">z.B. Landwirte, Leistungssportler</string>
    <string name="frageDrei">Warum ist das Geschlecht für die Berechnung relevant?</string>
    <string name="antwortDrei">Bei der Berechnung wird zwischen den Geschlechtern unterschieden, da für einen weiblichen Körper in Abhängigkeit vom Alter, Gewicht und Größe andere Richtwerte zur Berechnung des Energiebedarfs gelten  als für einen männlichen Körper.</string>
    <string name="frageVier">Was muss beim Ausfüllen der Eingabefelder beachtet werden?</string>
    <string name="antwortVier">Beim Ausfüllen der Eingabefelder muss zwingend darauf geachtet werden, dass alle Felder mit korrekten Daten ausgefüllt sind. Zudem müssen die jeweiligen eingegebenen Stunden für die jeweiligen Aktivitäten in der Summe 24 betragen, da die Berechnung auf einen Tag mit 24 Stunden basaiert. Ansonsten ist keine Berechnung der Energiezufuhr möglich. Im Falle, dass eine der Aktivitäten an einem Tag vom Körper nicht ausgeübt worden ist, ist der Wert 0 einzutragen. Die in grau hinterlegten Beispiele in den Eingabefeldern zeigen, wie eine mögliche Eingabe aussehen kann.</string>
    <string name="textViewName">Name:</string>
    <string name="Einfuegen">einfügen</string>
    <string name="Loeschen">Löschen</string>

    //Detailansicht
    <string name="id">ID</string>

    //Toast-Texte AktivitaetActivity
    <string name="vervollstaendigeFelder">Alle Felder müssen mit Zahlen belegt werden!</string>
    <string name="summeMeassage">lle Werte zusammen müssen 24h ergeben!</string>
    <string name="berechnungsMessage">Sie befinden sich bereits bei der Berechnung</string>


    //Toast-Texte ErgebnisAktivity
    <string name="nameEingeben">Geben Sie bitte Ihren Namen ein!</string>
    <string name="datenHinzugefuegt">Daten erfolgreich hinzugefügt</string>
    <string name="datenNichtHinzugefuegt">Daten konnten nicht hinzugefügt werden</string>

    //Toast-Texte Main-Aktivity
    <string name="nurZahlen">Bitte nur Zahlen eingeben!</string>
    <string name="Wertebereich">Die eingegebenen Werte liegen außerhalb des Wertebereiches!</string>

    //Toast-Texte Datenliste-Activity
    <string name="datenansichtMessage">Sie befinden sich breits bei den gespeicherten Daten</string>

    //Toast HElp-Activity
    <string name="helpMessage">Sie befinden sich breits auf der Hilfe-Seite</string>
</resources>
