<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backroundColor"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:background="@color/backroundColor"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="100dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_geschlecht"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/gender"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toEndOf="@+id/text_geschlecht">

                <RadioButton
                    android:id="@+id/radio_maennlich"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:textColor="@color/colorBlack"
                    android:text="@string/rbMaennlich"
                    android:layout_marginRight="25dp"
                    android:textSize="18sp"
                    android:layout_marginLeft="11dp"/>

                <RadioButton
                    android:id="@+id/radio_weiblich"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/rbWeiblich"
                    android:textColor="@color/colorBlack"
                    android:textSize="18sp" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">


            <TextView
                android:id="@+id/text_gewicht"
                android:layout_width="79dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/textViewGewicht"
                android:textColor="@color/colorBlack"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/gewicht"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="14dp"
                android:ems="10"
                android:hint="z.B. 59.0"
                android:inputType="numberDecimal"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_gewicht_masseinheit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/textViewEinheitKg"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="italic" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/text_groesse"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/textViewGroesse"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/groesse"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="14dp"
                android:ems="10"
                android:hint="z.B. 160"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/text_groesse_masseinheit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"

                android:text="@string/textViewEinheitCm"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="italic" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <TextView
                android:id="@+id/text_alter"
                android:layout_width="76dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/textViewAlter"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/alter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="10"
                android:layout_marginLeft="14dp"
                android:hint="z.B. 20"
                android:inputType="numberDecimal"/>

            <TextView
                android:id="@+id/text_alter_masseinheit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/TextViewYears"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="italic" />



        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="berechnen"
        android:text="@string/btnWeiter"
        android:textColor="@color/colorWhite"

        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />


</androidx.constraintlayout.widget.ConstraintLayout>